create optimize vehicle+order+planID
